dashboard icon change and spacing issue resolved

--- a/admin/view/stylesheet/stylesheet_gunstudio.css
+++ b/admin/view/stylesheet/stylesheet_gunstudio.css
@@ -268,14 +268,17 @@ a:hover, a:focus {
 /* 2nd lvl */
 #menu li li a {
 	color: #fff;
+	font-size: 16px;
+	text-transform: uppercase;
+	letter-spacing: 2.8px;
+	font-weight: 600;
 
 }
 #menu li li a:before {
 	content: "\f105";
-	font-size: 16px;
+	font-size: 14px;
 	font-family: FontAwesome;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin: 0 8px 0 22px;
 	transition: margin ease 0.5s;
 }
 #menu li li a:hover:before {
